* ext/openssl/extconf.rb: remove checks for available functions. * ext/openssl/missing.h: ditto.   Thanks, Tim Mooney for reporting this!   [Bug #5432] [ruby-core:40088]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33843 b2dd03c8-39d4-4d8f-98ff-823fe69b080e